--- a/code/package.json
+++ b/code/package.json
@@ -24,6 +24,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "martinez-polygon-clipping": "^0.7.0",
     "phaser": "^3.20.1"
   }
 }
